<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EBalance BD</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_single_sim">সিঙ্গেল সিম</string>
    <string name="title_activity_dual_sim">ডুয়েল সিম</string>
    <string name="bn_select_op">আপনার অপারেটর নির্বাচন করুন</string>
    <string name="bn_gp">গ্রামীনফোন</string>
    <string name="bn_robi">রবি</string>
    <string name="bn_banglalink">বাংলালিঙ্ক </string>
    <string name="bn_get_eb">জরুরী ব্যালেন্স আনুন </string>
    <string name="bn_check_eb">জরুরী ব্যালেন্স চেক করুন</string>
    <string name="bn_shake">এবার দিন ঝাঁকি</string>
    <string name="bn_single_sim">সিঙ্গেল সিম</string>
    <string name="bn_duel_sim">ডুয়েল সিম</string>
    <string name="bn_que_sim_type">আপনার মোবাইল টি কোন ধরনের?</string>
    <string name="bn_robi_alert">রবিতে শুধুমাত্র সাশ্রয়ী এবং অনন্যা প্যাকেজে আপনি জরুরী ব্যালেন্স সুবিধাটি উপভোগ করতে পারবেন।</string>
    <string name="bn_select_alert">অনুগ্রহ করে অন্তত একটি নির্বাচন করুন</string>
    <string name="bn_motion_sensor_alert">আপনার ডিভাইস এ ঝাঁকি কাজ না করলে, আপনি ঝাঁকির বিকল্প হিসাবে হট কি ব্যবহার করতে পারেন।</string>
    
    <!-- All app -->
    <string name="bn_got_it">বুঝেসি</string>
    <string name="bn_alert">জেনে রাখুন</string>
    <string name="bn_on">চালু</string>
    <string name="bn_off">বন্ধ</string>
    <string name="bn_que_want">আপনি কি করতে চান?</string>
    <string name="bn_settings">সেটিংস্‌</string>
    <string name="title_activity_sim_config">সেটিংস্‌</string>
    <string name="bn_version">ভার্সন</string>

</resources>