<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Switch
        android:id="@+id/sEbGet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/bn_get_eb"
        android:textColor="@color/switch_text_color"
        android:textOff="@string/bn_off"
        android:textOn="@string/bn_on"
        android:textSize="20dp" />

    <Switch
        android:id="@+id/sEbCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bn_check_eb"
        android:textColor="@color/switch_text_color"
        android:textOff="@string/bn_off"
        android:textOn="@string/bn_on"
        android:textSize="20dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bHotKey"
                android:layout_width="90sp"
                android:layout_height="90sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_round_button"
                android:layout_marginBottom="20dp"
                android:text="" />

            <TextView
                android:id="@+id/tvAlertMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alert_back_color"
                android:gravity="center"
                android:text="@string/bn_que_want"
                android:textColor="@color/alert_text_color"
                android:textSize="25dp" />
        </LinearLayout>

</LinearLayout>